# atomic-mcp

./: pyproject.toml  setup.py
.github/workflows/: code-quality.yml  docs.yml
atomic_mcp/: __init__.py
atomic_mcp/server/: server.py
atomic_mcp/server/services/: resource.py
