[project]
name = "atomic-mcp"
version = "0.1.0"
description = "A framework for building MCP Servers using Atomic Agents and FastMCP"
authors = [
    {name = "jon fox",email = "jon@foxsolutions.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.12"
dependencies = [
    "atomic-agents (>=2.0.1,<3.0.0)",
    "fastmcp (>=2.11.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
